Ensure svg doesn't get clipped

--- a/src/scss/_site-visuals.scss
+++ b/src/scss/_site-visuals.scss
@@ -12,3 +12,7 @@
   height: var(--pixel-60);
   width: auto;
 }
+
+.navigation-icons {
+  overflow: visible;
+}
